--- a/김영한 MVC - 1편 하/src/main/resources/templates/basic/addForm.html
+++ b/김영한 MVC - 1편 하/src/main/resources/templates/basic/addForm.html
@@ -11,7 +11,7 @@
         }
 
         .field-error {
-            border-color: #a52834;
+            border-color: #832b33;
             color: #a52834;
         }
 
@@ -24,32 +24,27 @@
     <h4 class="mb-3">상품 입력</h4>
     <form action="item.html" th:action th:object="${item}" method="post">
 
-        <div th:if="${errors?.containsKey('globalError')}">
-            <p class="field-error" th:text="${errors['globalError']}"> 전체오류메세지 </p>
+        <div th:if="${#fields.hasGlobalErrors()}">
+            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}"> 글로벌 오류 메세지 </p>
         </div>
-
-
         <div>
             <label for="itemName" th:text="#{label.item.itemName}">상품명</label>
             <!--   th:field = id,name,value 을 대신해서 만들어준다.         -->
             <input type="text" id="itemName" th:field="*{itemName}"
-                   th:class="${errors?.containsKey('itemName')} ? 'form-control field-error' : 'form-control'"
-                   class="form-control" placeholder="이름을 입력하세요">
-            <div class="field-error" th:if="${errors?.containsKey('itemName')}" th:text="${errors['itemName']}">상품명에러</div>
+                   th:errorclass="field-error" class="form-control" placeholder="이름을 입력하세요">
+            <div th:class="field-error" th:errors="*{itemName}"></div>
+            <!--                   th:class="${errors?.containsKey('itemName')} ? 'form-control field-error' : 'form-control'"-->
+            <!--            <div class="field-error" th:if="${errors?.containsKey('itemName')}" th:text="${errors['itemName']}">상품명에러</div>-->
         </div>
         <div>
             <label for="price" th:text="#{label.item.price}">가격</label>
-            <input type="text" id="price" th:field="*{price}"
-                   th:class="${errors?.containsKey('price')} ? 'form-control field-error' : 'form-cotrol'"
-                   class="form-control" placeholder="가격을 입력하세요">
-            <div class="field-error" th:if="${errors?.containsKey('price')}" th:text="${errors['price']}">가격에러</div>
+            <input type="text" id="price" th:field="*{price}" th:errorclass="field-error" class="form-control" placeholder="가격을 입력하세요">
+                <div th:class="field-error" th:errors="*{price}" ></div>
         </div>
         <div>
             <label for="quantity" th:text="#{label.item.quantity}">수량</label>
-            <input type="text" id="quantity"
-                   th:class="${errors?.containsKey('quantity')} ? 'form-control field-error' : 'from-control'"
-                   class="form-control" th:field="*{quantity}" placeholder="수량을 입력하세요">
-            <div th:class="field-error" th:if="${errors.containsKey('quantity')}" th:text="${errors['quantity']}">수량에러</div>
+            <input type="text" id="quantity" th:errorclass="field-error" class="form-control" th:field="*{quantity}" placeholder="수량을 입력하세요">
+                <div th:class="field-error" th:errors="*{quantity}"></div>
         </div>
         <hr class="my-4">
         <!-- single checkbox -->
