--- a/김영한 MVC - 1편 하/src/main/resources/templates/basic/addForm.html
+++ b/김영한 MVC - 1편 하/src/main/resources/templates/basic/addForm.html
@@ -30,8 +30,7 @@
         <div>
             <label for="itemName" th:text="#{label.item.itemName}">상품명</label>
             <!--   th:field = id,name,value 을 대신해서 만들어준다.         -->
-            <input type="text" id="itemName" th:field="*{itemName}"
-                   th:errorclass="field-error" class="form-control" placeholder="이름을 입력하세요">
+            <input type="text" id="itemName" th:field="*{itemName}" th:errorclass="field-error" class="form-control" placeholder="이름을 입력하세요">
             <div th:class="field-error" th:errors="*{itemName}"></div>
             <!--                   th:class="${errors?.containsKey('itemName')} ? 'form-control field-error' : 'form-control'"-->
             <!--            <div class="field-error" th:if="${errors?.containsKey('itemName')}" th:text="${errors['itemName']}">상품명에러</div>-->
