--- a/MVC1,2 복습/src/main/resources/templates/items/editForm.html
+++ b/MVC1,2 복습/src/main/resources/templates/items/editForm.html
@@ -9,6 +9,10 @@
         .container {
             max-width: 560px;
         }
+        .field-error {
+            border-color: #832b33;
+            color: #a52834;
+        }
     </style>
 </head>
 <body>
@@ -24,17 +28,23 @@
         <div>
             <label for="itemName">상품명</label>
             <input type="text" id="itemName" name="itemName" class="form-control"
-                   th:field="*{itemName}" value="상품A">
+                    th:errorclass="field-error" th:field="*{itemName}" value="상품A">
+            <div th:class="field-error" th:errors="*{itemName}"></div>
+
         </div>
         <div>
             <label for="price">가격</label>
             <input type="text" id="price" name="price" class="form-control"
-                   th:field="*{price}" value="10000">
+                   th:errorclass="field-error" th:field="*{price}" value="10000">
+            <div th:class="field-error" th:errors="*{price}"></div>
+
         </div>
         <div>
             <label for="quantity">수량</label>
             <input type="text" id="quantity" name="quantity" class="form-control"
-                   th:field="*{quantity}" value="10">
+                   th:errorclass="field-error" th:field="*{quantity}" value="10">
+            <div th:class="field-error" th:errors="*{quantity}"></div>
+
         </div>
         <hr class="my-4"> <div class="row">
         <div class="col">
