feat : 로그인 구현

--- a/MVC1,2 복습/src/main/resources/templates/items/items.html
+++ b/MVC1,2 복습/src/main/resources/templates/items/items.html
@@ -26,9 +26,9 @@
             <thead>
             <tr>
                 <th>ID</th>
-                <th>상품명</th>
-                <th>가격</th>
-                <th>수량</th>
+                <th th:text="#{label.item.itemName}">상품명</th>
+                <th th:text="#{label.item.price}">가격</th>
+                <th th:text="#{label.item.quantity}">수량</th>
             </tr>
             </thead>
             <tbody>
