--- a/MVC1,2 복습/src/main/resources/templates/items/addForm.html
+++ b/MVC1,2 복습/src/main/resources/templates/items/addForm.html
@@ -19,7 +19,7 @@
 <div class="container"> <div class="py-5 text-center">
     <h2>상품 등록 폼</h2>
 </div>
-    <h4 class="mb-3">상품 입력</h4>
+    <h4 class="mb-3" >상품 입력</h4>
     <form action="item.html" th:action th:object="${item}" method="post">
 
         <div th:if="${#fields.hasGlobalErrors()}">
@@ -29,19 +29,19 @@
         </div>
 
         <div>
-            <label for="itemName">상품명</label>
+            <label for="itemName" th:text="#{label.item.itemName}">상품명</label>
             <input type="text" id="itemName" name="itemName" class="form-control" th:errorclass="field-error"
                     th:field="*{itemName}" placeholder="이름을 입력하세요">
             <div th:class="field-error" th:errors="*{itemName}"></div>
         </div>
         <div>
-            <label for="price">가격</label>
+            <label for="price" th:text="#{label.item.price}">가격</label>
             <input type="text" id="price" name="price" class="form-control" th:errorclass="field-error"
                    th:field="*{price}" placeholder="가격을 입력하세요">
             <div th:class="field-error" th:errors="*{price}"></div>
         </div>
         <div>
-            <label for="quantity">수량</label>
+            <label for="quantity" th:text="#{label.item.quantity}">수량</label>
             <input type="text" id="quantity" name="quantity" class="form-control" th:errorclass="field-error"
                    th:field="*{quantity}" placeholder="수량을 입력하세요">
             <div th:class="field-error" th:errors="*{quantity}"></div>
@@ -49,13 +49,13 @@
         <hr class="my-4">
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">상품 등 록</button>
+                <button class="w-100 btn btn-primary btn-lg" type="submit" th:label="#{page.addItem}">상품 등 록</button>
             </div>
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='items.html'"
                         th:onclick="|location.href='/items'|"
-                        type="button">취소</button>
+                        type="button" th:label="#{button.cancel}">취소</button>
             </div>
         </div>
     </form>
